<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="app_name">OpenWLANMap@Android</string>
 <string name="stat_newAPs">Unique new APs:</string>
 <string name="stat_updAPs">Known but updated APs:</string>
 <string name="stat_delAPs">Deleted APs (_nomap):</string>
 <string name="stat_newPoints">Points for this upload:</string>
 <string name="teamid">Your Teams Identifier</string>
 <string name="teamtext">This number identifies your team. Share it with all people that shall become members of your team and let them enter this number within the settings:</string>
 <string name="gpsdisabled_warn">Warning! GPS is deactivated! Location evaluation via GPS should be enabled in order to use this App!</string>
 <string name="upload_data">Upload data now</string>
 <string name="upload_in_progress">Upload is already in progress!</string>
 <string name="show_map">Show overall map</string>
 <string name="freehotspot">Find next free hotspot</string>
 <string name="save_map">Save map to disk</string>
 <string name="map_saved_as">Map saved as</string>
 <string name="map_not_saved">Map could not be saved!</string>
 <string name="prefs">Preferences</string>
 <string name="loading_map">Downloading map&#8230;</string>
 <string name="loading_data">Downloading data&#8230;</string>
 <string name="preparing_data">Preparing data&#8230;</string>
 <string name="uploading_data">Uploading data&#8230;</string>
 <string name="no_net_access">Don\'t access network</string>
 <string name="nothing_to_upload">Not enough data available for upload! You need at least 250 APs to upload your current data.</string>    
 <string name="upload_problem">Connection problem during upload, may be you try later again!</string>    
 <string name="http_error">HTTP-Error</string>    
 <string name="new_version_available">There is a new version of OpenWLANMap@Android available. Please visit http://www.openwlanmap.org to download it.</string>
 <string name="really_exit_app">Really exit application?</string>    
 <string name="really_show_map">Network access is disabled, only cached map data will be visible. Really continue?</string>    
 <string name="track_info">You have enabled (theft)tracking of your device. This requires network access to submit your position from time to time. To find the current position you have to enter these tracking numbers at the projects website</string>
 <string name="track_info2">Write down these numbers and keep them at a secure place for later usage!</string>    
 <string name="ok">OK</string>    
 <string name="yes">Yes</string>    
 <string name="no">No</string>    
 <string name="exit">Exit</string>    
 <string name="bssid">ID</string>    
 <string name="lat">Latitude</string>    
 <string name="lon">Longitude</string>    
 <string name="rank">Rank</string>    
 <string name="points">points</string>    
 <string name="your_new_rank">Your new rank</string>    
 <string name="ap_count">WiFi-AP count</string>
 <string name="credits">Credits</string>
 <string name="help">Help</string>
 <string name="calib_tele">Calibrate Telemetry Sensors</string>    
 <string name="calib_orient">Calibrate Orientation Sensor</string>    
 <string name="help_txt">Colours of big WLAN-counters:\nred - no localisation and no WLAN tracing\nyellow - WLAN-based localisation\nwhite - GPS lock\n\nColours of listed WLANs:\nred - _nomap-marked opt-out-network\nblue - open, unencrypted network\ngreen - free hotspot\nwhite - other private network</string>
 <string name="map_dl_failure">Could not download map. Maybe you don\'t have a network connection or have not uploaded any data yet?</string>
 <string name="waitGPS">Waiting for GPS fix&#8230;</string>
 
 <string name="prefsAutoConnect">Auto-Connect to Freifunk WLANs</string>
 <string name="prefsAutoConnectText">ATTENTION! This option is dangerous and should be used only with completely secured devices!</string>
 <string name="prefsOpenAutoConnect">Auto-Connect to open WLANs</string>
 <string name="prefsAutoStart">Automatically start on boot-up</string>
 <string name="prefsAutoStartText">Start this app automatically as soon as the device was started</string>
 <string name="prefsAdaptiveScanning">Adaptive Scanning</string>
 <string name="prefsAdaptiveScanningText">Get more scanning results with less resource consumption when moving slowly (pedestrians) and with only slightly increased load when moving fast (vehicles)</string>
 <string name="prefsTextSize">Text font size</string>
 <string name="prefsTextSizeText">Size of the font that is used to show text - larger ones are easier to read but need more space</string>
 <string name="prefsBigCounter">Show big WLAN counters in App</string>
 <string name="prefsBigCounterText">The current number of scanned WLAN networks is shown on upper left corner of App using huge, easy to read numbers</string>
 <string name="prefsHudCounter">Show always on-top WLAN counters</string>
 <string name="prefsHudCounterText">The current number of scanned and open WLAN networks is always shown on upper left corner</string>
 <string name="prefsShowMap">Show live-map instead of coordinates</string>
 <string name="prefsShowMapText">Instead of the coordinates a map is shown where the detected WLANs are shown into; this function works only with activated network access</string>
 <string name="prefsShowType">Display method of networks</string>
 <string name="prefsShowTypeText">Configures which information about scanned network are shown</string>
 <string name="prefsMapType">Used map type</string>
 <string name="prefsMapTypeText">Map data source and style</string>
 <string name="prefsScreenLight">Screen brightness / stand-by</string>
 <string name="prefsScreenLightText">Specifies the screens behaviour when the device would go to stand-by mode (requires restarting the App)</string>
 <string name="prefsTelemetry">Telemetry Data</string>
 <string name="prefsTelemetryText">Specifies usage of telemetry data (consisting of acceleration, speed, position, pitch, orientation)</string>
 <string name="prefsTag">Highscore Tag</string>
 <string name="prefsTagText">Tag your entry in official highscore list with this non-unique text</string>
 <string name="prefsTeam">Team Identifier</string>
 <string name="prefsTeamText">Enter the identifier of the team here where you want to become a member</string>
 <string name="prefsPubMap">Publicly show own map</string>
 <string name="prefsPubMapText">Be careful! Makes the own map publicly visible in top-list</string>
 <string name="prefsPublish">Publish own data</string>
 <string name="prefsPublishText">Make own data available to the public through download from openwlanmap.org</string>
 <string name="prefsTrack">Track own position</string>
 <string name="prefsTrackText">Track position of this device online</string>
 <string name="prefsAutoUpload">Upload via WLAN automatically</string>
 <string name="prefsAutoUploadText">Upload collected APs automatically via WLAN-connection (requires restart of app)</string>
 <string name="prefsNoGPSExit">Exit Application when there is no GPS fix</string>
 <string name="prefsNoGPSExitText">Exit the application after some time without GPS</string>
 <string name="prefsHTTPUpload">Upload data via (insecure) HTTP</string>
 <string name="prefsHTTPUploadText">Not recommended: upload WLAN and position data unencrypted</string>
 <string name="prefsUsePrj">Project to be supported</string>
 <string name="prefsUsePrjText">Choose the project which has to be supported by your data-uploads</string>

 <string name="doexport">Export account data</string>
 <string name="doimport">Import account data</string>
 <string name="export_done">Account data successfully exported to SD-card, file OWMAP.export</string>
 <string name="export_failed">Error: Could not access SD-card to write file OWMAP.export!</string>
 <string name="import_done">Account data successfully imported</string>
 <string name="import_failed">Error: Could not load OWMAP.export from SD-card!</string>
 
 <color name="black">#000000</color>
 <color name="white">#FFFFFF</color>
 
</resources>
